--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -190,7 +190,7 @@ We will now address these questions while bearing in mind that unlike the typica
 \paragraph{Cross validate or not?}
 Given our goal, a biased error estimate is not a problem provided that bias is consistent over all permutations. 
 The underlying intuition is that if the exact same computation is performed over all permutations, then a permutation test will be ``fair'', i.e., will not inflate the false positive rate. 
-We will thus be considering both cross validated accuracies, and resubstitution accuracies as our test statistics. 
+We will thus be considering both cross validated accuracies, and \emph{resubstitution accuracies}, where the accuracy is evaluated on the training set. 
 
 
 \paragraph{Balanced folding?}
