--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -168,18 +168,14 @@ I.e., we test if the multivariate voxel activation pattern has the same distribu
 An accuracy test amounts to learning a predictive model and testing if its predictions are better than chance. 
 Denoting a dataset by $\data:=(\features_i,\outcomes_i)_{i=1}^n$, and a predictor by $\hyp$, then a learning algorithm $\algo$ is a mapping $\algo:\data \to \hyp$. 
 The accuracy of predictor $\hyp=\algo_{\data}$ is defined as the probability of $\hyp$ making a correct prediction.
-Denoting by $\measure$ the probability measure of $(\x,\y)$, and by $\measuren$ the same for the i.i.d, sample $\data$
+Denoting by $\measure$ the probability measure of $(\x,\y)$, and by $\measuren$ the same for the i.i.d sample $\data$
 \begin{align}
 	\acc_{\algo_\data}:=\measure(\algo_\data(x)=y).
 \end{align}
 The accuracy of an algorithm $\algo$ is defined as the average accuracy, over all possible data sets
 \begin{align}
-	\acc_{\algo}:=\int_\data \acc_{\data} \; d\measuren(\data)
+	\acc_{\algo}:=\int_\data \acc_{\algo_\data} \; d\measuren(\data).
 \end{align}
-
-
-The accuracy of an algorithm, $\acc_\algo$ is defined as the a
-
 Denoting an estimate of $\acc_{\hyp}$ by $\accEstim_{\hyp}$, a statistically significant ``better than chance'' estimate of $\accEstim_{\hyp}$ is evidence that the classes are distinct. 
 
 
