--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -257,7 +257,7 @@ Since we will be aggregating these statistics over random data sets where $\majo
 We thus propose the z-scored accuracy statistic, $\accZ_{\hyp}$:
 \begin{align}
 \label{eq:z_scored_accuracy}
-	\accZ_{\hyp} := |\accEstim_{\hyp}-\majority|/\sqrt{\majority(1-\majority)}.
+	\accZ_{\hyp} := \frac{|\accEstim_{\hyp}-\majority|}{\sqrt{\majority(1-\majority)}}.
 \end{align} 
 
 Table~\ref{tab:collected} collects an initial battery of tests we will be comparing. 
@@ -532,16 +532,16 @@ It does so, however, for the train set, and not the test set.
 An algorithm that samples test sets with replacement is the \emph{leave-one-out bootstrap estimator} (bLOO) and its derivation-- the \emph{0.632 bootstrap estimator} (b$0.632$) \citep[Sec 7.11]{hastie_elements_2003}.
 \begin{definition}[bLOO]
 \label{def:bloo}
-Denoting by $C^{(i)}$ the index set of bootstrap samples, $b$, where observation $i$ is not in the train set,
-and by $\hypEstim^b$ the classifier fitted to the $b$'th bootstrap training sample, 
-then the \emph{leave-one-out bootstrap} estimate is defined as:
-$$
-	\acc_{bLOO}:= \frac 1n \sum_{i=1}^{n} \frac{1}{|C^{(i)}|} \sum_{b \in C^{(i)}} I(\hypEstim^b(x_i)=y_i).
-$$ 
+Denoting by $\data^b$, a bootstrap sample $b$, sampled with replacement from $\data$. 
+Also denote by $C^{(i)}$ the index set of bootstrap samples, $b$, not containing observation $i$.
+The \emph{leave-one-out bootstrap} estimate, $\accEstim_{\algo}^{bLOO}$,  is defined as:
+\begin{align}
+		\accEstim_{\algo}^{bLOO}:= \frac 1n \sum_{i=1}^{n} \frac{1}{|C^{(i)}|} \sum_{b \in C^{(i)}} \indicator{\hypFun{\data^b}{\features_i}=\outcomes_i}.
+\end{align}
 Equivalently, denoting by $S^{(b)}$ the indexes of observations, $i$, that are not in the bootstrap train sample $b$,
-$$
+\begin{align}
 	\acc_{bLOO}= \frac 1B \sum_{b=1}^{B} \frac{1}{|S^{(b)}|} \sum_{i \in S^{(b)}} I(\hypEstim^b(x_i)=y_i).
-$$
+\end{align}
 \end{definition}
 
 \begin{definition}[b$0.632$]
